Updates to download the tranco list on app startup